# stm32_cubemx_bmm150

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_tsc.c
app/: CMakeLists.txt
app/bmm150/: CMakeLists.txt  bmm150.c  bmm150.cpp  bmm150.h  bmm150.hpp  bmm150_config.h  bmm150_config.hpp  bmm150_registers.h  bmm150_registers.hpp  bmm150_utility.cpp  bmm150_utility.h  bmm150_utility.hpp
app/main/: CMakeLists.txt  main.cpp
app/stm32_utility/: cnt_device.cpp  cnt_device.hpp  common.hpp  gpio.cpp  gpio.hpp  i2c_device.cpp  i2c_device.hpp  ow_device.cpp  ow_device.hpp  pwm_device.cpp  pwm_device.hpp  spi_device.cpp  spi_device.hpp
app/utility/: kalman.hpp  matrix.hpp  quaternion3d.hpp  rotation3d.hpp  sfo.hpp  sfr.hpp  utility.hpp  vector3d.hpp
